# Robotics-Developer-Master-Class-2023

./: README.md
Git_course/Exercise_all/src/autonomous_buddy/: CMakeLists.txt  README.md  package.xml
Git_course/Exercise_all/src/autonomous_buddy/launch/: autonomous_buddy.launch  robot_description.launch  simulation.launch
Git_course/Exercise_all/src/autonomous_buddy/scripts/: teleop.py
Git_course/Exercise_all/src/autonomous_buddy/urdf/: autonomous_buddy.gazebo  autonomous_buddy.xacro
Modern_cpp/catkin_ws/src/exercises_unit_2/: CMakeLists.txt
Modern_cpp/catkin_ws/src/exercises_unit_2/src/: lists.cpp  robot_heading_as_deque.cpp  robot_heading_as_vector.cpp  robot_position_as_array.cpp
Modern_cpp/catkin_ws/src/laser_reader/: CMakeLists.txt  package.xml
Modern_cpp/catkin_ws/src/laser_reader/include/: laser_reader.h
Modern_cpp/catkin_ws/src/laser_reader/src/: laser_reader.cpp  laser_subscriber.cpp  laser_subscriber_smart.cpp
Modern_cpp/catkin_ws/src/odom_subs/: CMakeLists.txt
Modern_cpp/catkin_ws/src/odom_subs/src/: odom_listener.cpp
Modern_cpp/catkin_ws/src/stl_lib/: array_test.cpp  set1  set1.cpp
Modern_cpp/catkin_ws/src/test_library/include/test_library/: test_library.h
Modern_cpp/catkin_ws/src/test_library/src/: test_library.cpp
Modern_cpp/catkin_ws/src/unit6_exercises/: CMakeLists.txt  package.xml
Modern_cpp/catkin_ws/src/unit6_exercises/include/: magic_printer.h  specialised_complete.h  specialised_example.h  subscriber_basic.h
Modern_cpp/catkin_ws/src/unit6_exercises/src/: magic_printer.cpp  magic_subscriber_function.cpp  magic_subscriber_image_edgedetector.cpp  main_magic_printer.cpp  main_magic_subscriber_function.cpp  main_pcl_topic_subscriber.cpp  main_specialised_complete.cpp  main_specialised_example.cpp  main_subscriber_basic.cpp  specialised_complete.cpp  specialised_example.cpp  subscriber_basic.cpp
Ros_basics/All/catkin_ws/src/action_client_pkg/launch/: action.launch  cancel.launch  no_wait.launch
Ros_basics/All/catkin_ws/src/action_server_pkg/launch/: action.launch
Ros_basics/All/catkin_ws/src/action_server_pkg/src/: fibonacci_action_server.cpp
Ros_basics/All/catkin_ws/src/logs_test/: CMakeLists.txt
Ros_basics/All/catkin_ws/src/logs_test/src/: logger_example.cpp
Ros_basics/All/catkin_ws/src/my_cpp_class/: package.xml
Ros_basics/All/catkin_ws/src/my_cpp_class/src/: bb8_move_circle_class.cpp
Ros_basics/All/catkin_ws/src/my_custom_srv_msg_pkg/: CMakeLists.txt
Ros_basics/All/catkin_ws/src/my_custom_srv_msg_pkg/launch/: launch_server.launch
Ros_basics/All/catkin_ws/src/my_custom_srv_msg_pkg/src/: custom_service_server.cpp
Ros_basics/All/catkin_ws/src/service_client_pkg/: CMakeLists.txt
Ros_basics/All/catkin_ws/src/service_client_pkg/launch/: exercise51.launch  my_robot_arm_demo.launch
Ros_basics/All/catkin_ws/src/service_server_pkg/: CMakeLists.txt
Ros_basics/All/catkin_ws/src/service_server_pkg/launch/: launch_server.launch
Ros_basics/All/catkin_ws/src/topic_publisher_pkg/: package.xml
Ros_basics/Exercise_unit_10/src/logs_test/launch/: launch.launch
Ros_basics/Exercise_unit_5/src/service_client_pkg/src/: simple_service_client2.cpp
Ros_basics/Exercise_unit_6/src/service_server_pkg/launch/: launch_client.launch
Ros_basics/Exercise_unit_6/src/service_server_pkg/src/: simple_service_server.cpp
Ros_basics/Exercise_unit_8/src/action_client_pkg/: CMakeLists.txt
Ros_basics/Exercise_unit_8/src/action_client_pkg/launch/: wait.launch
Ros_basics/Exercise_unit_8/src/action_client_pkg/src/: ardrone_action_client.cpp
Ros_basics/Exercise_unit_9/src/action_server_pkg/: CMakeLists.txt
Ros_basics/Extra_unit/my_cpp_class/: CMakeLists.txt
Ros_basics_Unit_3/Excercise_3.2/src/topic_publisher_pkg/: CMakeLists.txt
Ros_basics_Unit_3/Excercise_3.2/src/topic_publisher_pkg/src/: simple_topic_publisher.cpp
Ros_basics_Unit_3/Excercise_unit_4/src/topic_publisher_pkg/: CMakeLists.txt
Ros_basics_Unit_3/Excercise_unit_4/src/topic_publisher_pkg/src/: simple_topic_publisher.cpp
Ros_basics_Unit_3/Exercise_unit_4/src/topic_publisher_pkg/src/: simple_topic_subscriber.cpp
(+1 files in other folders)
